# infra-warden

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/interviews/: 2026-06-16-warden-sandbox-infra-questions.md
docs/learnings/: 2026-07-12-controller-leasekeeper.md
scripts/: build_e2b_template.py  run_warden_task.py
src/warden_sandbox_infra/: __init__.py  cli.py  config.py  controller.py  lease_keeper.py  models.py  ports.py  runtimes.py  supabase_store.py
tests/: test_config.py  test_controller.py  test_lease_keeper.py  test_run_warden_task_script.py  test_runtimes.py  test_task_contract.py
