[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-sandbox-infra"
version = "0.1.0"
description = "Sandbox controller for running Warden tasks in isolated runtimes."
requires-python = ">=3.12"
dependencies = [
  "e2b>=2.29.0,<3",
  "httpx>=0.28,<1",
]

[project.scripts]
warden-sandbox-infra = "warden_sandbox_infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
